# BitirmeProjesi-Agentic

./: CLAUDE.md
.github/: copilot-instructions.md
backend/: README.md  langgraph.json  pyproject.toml
backend/agents/baseline_agent/: PROMPT.md  agent.py  tools.py
backend/agents/deep_agent/: agent.py  tools.py
backend/docs/: AGENTS.md  CONTEXT.md  DECISIONS.md  PROGRESS.md  PROMPT_deep_agent.md  SECURITY.md
backend/shared/: repo_utils.py
frontend/src/components/thread/: agent-selector.tsx  index.tsx
frontend/src/components/thread/messages/: ai.tsx
frontend/src/providers/: Stream.tsx
